playing with label constraints

--- a/Swift3/scratchy/scratchy/Base.lproj/Main.storyboard
+++ b/Swift3/scratchy/scratchy/Base.lproj/Main.storyboard
@@ -25,21 +25,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="V4U-4s-BCC">
-                                <rect key="frame" x="62" y="95" width="250" height="512"/>
+                                <rect key="frame" x="62" y="139" width="250" height="468"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rDN-Db-t7J">
-                                        <rect key="frame" x="0.0" y="0.0" width="250" height="251"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="229"/>
                                         <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fxz-GM-6jb">
-                                        <rect key="frame" x="0.0" y="261" width="250" height="251"/>
+                                        <rect key="frame" x="0.0" y="239" width="250" height="229"/>
                                         <color key="backgroundColor" red="0.71728766030000002" green="0.0067189837739999999" blue="0.02686780528" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GRe-kH-L43">
-                                <rect key="frame" x="127.5" y="28" width="120" height="40"/>
+                                <rect key="frame" x="127.5" y="72" width="120" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="DAV-oL-1N8"/>
@@ -82,7 +82,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HTg-Sp-0e8" customClass="BetterButton" customModule="scratchy" customModuleProvider="target">
-                                <rect key="frame" x="67" y="233" width="240" height="200"/>
+                                <rect key="frame" x="67.5" y="233.5" width="240" height="200"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="0Vh-Dv-wtQ"/>
@@ -94,7 +94,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJI-mk-qdI">
-                                <rect key="frame" x="87" y="466" width="200" height="100"/>
+                                <rect key="frame" x="87.5" y="466" width="200" height="100"/>
                                 <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="6EZ-Jx-vMH"/>
@@ -192,6 +192,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rfo-SG-di2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3772" y="-711"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mu2-ey-qqM">
+            <objects>
+                <viewController id="Z3a-de-8rC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1VM-xx-mP4"/>
+                        <viewControllerLayoutGuide type="bottom" id="YJr-Ve-UHf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9TI-iz-zOY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sVh-X4-I1G">
+                                <rect key="frame" x="7.5" y="269.5" width="360" height="128"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label Text Here" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="INw-jo-eoa">
+                                        <rect key="frame" x="30" y="54" width="300" height="21"/>
+                                        <color key="backgroundColor" red="0.50196081400000003" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" priority="999" constant="300" id="5Wd-Xh-lJ4"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="PuZ-dW-Xgu"/>
+                                    <constraint firstItem="INw-jo-eoa" firstAttribute="centerY" secondItem="sVh-X4-I1G" secondAttribute="centerY" id="Qnb-qY-Xlo"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="INw-jo-eoa" secondAttribute="trailing" constant="30" id="ag4-zO-0Xw"/>
+                                    <constraint firstItem="INw-jo-eoa" firstAttribute="centerX" secondItem="sVh-X4-I1G" secondAttribute="centerX" id="ehN-X8-QPi"/>
+                                    <constraint firstAttribute="width" constant="360" id="liQ-Fs-h9p"/>
+                                    <constraint firstItem="INw-jo-eoa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="sVh-X4-I1G" secondAttribute="leading" constant="30" id="tLr-f4-PSm"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="sVh-X4-I1G" firstAttribute="centerY" secondItem="9TI-iz-zOY" secondAttribute="centerY" id="UBq-HR-pxg"/>
+                            <constraint firstItem="sVh-X4-I1G" firstAttribute="centerX" secondItem="9TI-iz-zOY" secondAttribute="centerX" id="vDY-De-YDZ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m9g-HK-Pfa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4802" y="-1018"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="VwM-XQ-Ibm">
@@ -339,7 +387,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lst-rI-yKN">
-                                <rect key="frame" x="28" y="174" width="320" height="320"/>
+                                <rect key="frame" x="27.5" y="173.5" width="320" height="320"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="f4h-kZ-glt">
                                         <rect key="frame" x="0.0" y="0.0" width="210" height="210"/>
