--- a/Obj-C/OCSectionedTable/OCSectionedTable/Base.lproj/Main.storyboard
+++ b/Obj-C/OCSectionedTable/OCSectionedTable/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -24,14 +25,27 @@
                                     <segue destination="TV7-vT-vFQ" kind="show" id="2aQ-6B-J09"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k9P-Jl-1df">
+                                <rect key="frame" x="20" y="83" width="239" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="239" id="ikh-eF-f70"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="iPQ-ue-xCP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P1e-wa-ULF"/>
                             <constraint firstItem="iPQ-ue-xCP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="aLD-Xa-r16"/>
+                            <constraint firstItem="k9P-Jl-1df" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="aTj-uv-Y8b"/>
+                            <constraint firstItem="k9P-Jl-1df" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="19" id="wr5-8V-oj0"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="HtX-cD-36s"/>
+                    <connections>
+                        <outlet property="theTextField" destination="k9P-Jl-1df" id="Pv0-C4-JTh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
