--- a/Swift3/scratchy/scratchy/Base.lproj/Main.storyboard
+++ b/Swift3/scratchy/scratchy/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ovs-NL-Y7T">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="s5R-7I-Dnj">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -69,10 +69,10 @@
             </objects>
             <point key="canvasLocation" x="3369" y="-1624"/>
         </scene>
-        <!--View Controller-->
+        <!--PickerView Subclass-->
         <scene sceneID="5Zu-SQ-48Q">
             <objects>
-                <viewController id="ovs-NL-Y7T" sceneMemberID="viewController">
+                <viewController title="PickerView Subclass" id="ovs-NL-Y7T" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="HDB-76-sXa"/>
                         <viewControllerLayoutGuide type="bottom" id="ajU-W0-51H"/>
@@ -256,6 +256,53 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pda-Zk-9Ce" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3357.5999999999999" y="-414.24287856071965"/>
+        </scene>
+        <!--Scratch View Controller-->
+        <scene sceneID="J4X-he-OgB">
+            <objects>
+                <viewController id="K4M-2S-NHv" customClass="ScratchViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ejU-XQ-ewh"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hop-YW-vpz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nJE-Dm-CAu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TKi-z6-njD">
+                                <rect key="frame" x="16" y="79" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="K4M-2S-NHv" id="PrU-0E-Vm3"/>
+                                </connections>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Xy-S9-4IO">
+                                <rect key="frame" x="16" y="167" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9Xy-S9-4IO" firstAttribute="trailing" secondItem="nJE-Dm-CAu" secondAttribute="trailingMargin" id="3Ch-WW-Hhx"/>
+                            <constraint firstItem="TKi-z6-njD" firstAttribute="leading" secondItem="nJE-Dm-CAu" secondAttribute="leadingMargin" id="7af-aF-6P9"/>
+                            <constraint firstItem="9Xy-S9-4IO" firstAttribute="leading" secondItem="nJE-Dm-CAu" secondAttribute="leadingMargin" id="JN0-iJ-N2V"/>
+                            <constraint firstItem="9Xy-S9-4IO" firstAttribute="top" secondItem="TKi-z6-njD" secondAttribute="bottom" constant="58" id="OiN-3Z-EOB"/>
+                            <constraint firstItem="TKi-z6-njD" firstAttribute="top" secondItem="ejU-XQ-ewh" secondAttribute="bottom" constant="59" id="WuJ-YT-sRg"/>
+                            <constraint firstItem="TKi-z6-njD" firstAttribute="trailing" secondItem="nJE-Dm-CAu" secondAttribute="trailingMargin" id="nD9-IF-yYY"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tfWithFont" destination="9Xy-S9-4IO" id="0mi-T4-4pP"/>
+                        <outlet property="theTextField" destination="TKi-z6-njD" id="zD2-xD-2vy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Bt-Zh-RRT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3396" y="232.53373313343329"/>
         </scene>
         <!--Better Button View Controller-->
         <scene sceneID="Ngz-CR-Cj8">
@@ -471,62 +518,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m9g-HK-Pfa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4801.3493253373317" y="-1018.4"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="E7S-2p-c5Q">
-            <objects>
-                <viewController id="A1x-Pv-gE6" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="aig-Q6-5c7"/>
-                        <viewControllerLayoutGuide type="bottom" id="c7B-4q-e48"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="HXY-dt-E8Q">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cEs-x1-YDt">
-                                <rect key="frame" x="24" y="120" width="327" height="30"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlF-y7-9d2">
-                                        <rect key="frame" x="0.0" y="0.0" width="153.5" height="30"/>
-                                        <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Button A"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jy6-Jb-ZXt">
-                                        <rect key="frame" x="173.5" y="0.0" width="153.5" height="30"/>
-                                        <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Button B"/>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2NF-xS-OGz">
-                                <rect key="frame" x="24" y="617" width="153.5" height="30"/>
-                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button 1"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lBi-Kp-bOJ">
-                                <rect key="frame" x="197" y="617" width="153.5" height="30"/>
-                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button 2"/>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="lBi-Kp-bOJ" secondAttribute="trailing" constant="8.5" id="0TF-Do-Wh5"/>
-                            <constraint firstItem="cEs-x1-YDt" firstAttribute="top" secondItem="aig-Q6-5c7" secondAttribute="bottom" constant="100" id="9TX-vO-KjJ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="cEs-x1-YDt" secondAttribute="trailing" constant="8" id="E75-rc-G9b"/>
-                            <constraint firstItem="lBi-Kp-bOJ" firstAttribute="top" secondItem="2NF-xS-OGz" secondAttribute="top" id="FNz-YQ-aLA"/>
-                            <constraint firstItem="2NF-xS-OGz" firstAttribute="leading" secondItem="HXY-dt-E8Q" secondAttribute="leadingMargin" constant="8" id="YUN-IQ-VgK"/>
-                            <constraint firstItem="c7B-4q-e48" firstAttribute="top" secondItem="2NF-xS-OGz" secondAttribute="bottom" constant="20" id="Yyd-jC-65k"/>
-                            <constraint firstItem="cEs-x1-YDt" firstAttribute="leading" secondItem="HXY-dt-E8Q" secondAttribute="leadingMargin" constant="8" id="d4R-Gz-61V"/>
-                            <constraint firstItem="lBi-Kp-bOJ" firstAttribute="width" secondItem="2NF-xS-OGz" secondAttribute="width" id="ot6-SA-irT"/>
-                            <constraint firstItem="lBi-Kp-bOJ" firstAttribute="leading" secondItem="2NF-xS-OGz" secondAttribute="trailing" constant="19.5" id="vAE-HY-gZe"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jT8-cW-URa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="6154" y="-1019"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="VwM-XQ-Ibm">
