--- a/Swift3/scratchy/scratchy/Base.lproj/Main.storyboard
+++ b/Swift3/scratchy/scratchy/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="s5R-7I-Dnj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="K4M-2S-NHv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -269,35 +269,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TKi-z6-njD">
-                                <rect key="frame" x="16" y="79" width="343" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="K4M-2S-NHv" id="PrU-0E-Vm3"/>
-                                </connections>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Xy-S9-4IO">
-                                <rect key="frame" x="16" y="167" width="343" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="17"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kVG-0w-Tzi">
+                                <rect key="frame" x="16" y="135" width="343" height="204"/>
+                                <color key="backgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="204" id="eWg-Kh-4Yo"/>
+                                </constraints>
+                            </tableView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Tbm-iO-gmV">
+                                <rect key="frame" x="16" y="380" width="343" height="204"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="204" id="iXA-QA-EAQ"/>
+                                </constraints>
+                            </tableView>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vdO-Tn-EmI">
+                                <rect key="frame" x="32" y="20" width="311" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Header View" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u6D-mi-jfh">
+                                        <rect key="frame" x="8" y="22" width="97.5" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="u6D-mi-jfh" firstAttribute="leading" secondItem="vdO-Tn-EmI" secondAttribute="leading" constant="8" id="lbL-lA-4eY"/>
+                                    <constraint firstItem="u6D-mi-jfh" firstAttribute="centerY" secondItem="vdO-Tn-EmI" secondAttribute="centerY" id="xvH-6n-71r"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="9Xy-S9-4IO" firstAttribute="trailing" secondItem="nJE-Dm-CAu" secondAttribute="trailingMargin" id="3Ch-WW-Hhx"/>
-                            <constraint firstItem="TKi-z6-njD" firstAttribute="leading" secondItem="nJE-Dm-CAu" secondAttribute="leadingMargin" id="7af-aF-6P9"/>
-                            <constraint firstItem="9Xy-S9-4IO" firstAttribute="leading" secondItem="nJE-Dm-CAu" secondAttribute="leadingMargin" id="JN0-iJ-N2V"/>
-                            <constraint firstItem="9Xy-S9-4IO" firstAttribute="top" secondItem="TKi-z6-njD" secondAttribute="bottom" constant="58" id="OiN-3Z-EOB"/>
-                            <constraint firstItem="TKi-z6-njD" firstAttribute="top" secondItem="ejU-XQ-ewh" secondAttribute="bottom" constant="59" id="WuJ-YT-sRg"/>
-                            <constraint firstItem="TKi-z6-njD" firstAttribute="trailing" secondItem="nJE-Dm-CAu" secondAttribute="trailingMargin" id="nD9-IF-yYY"/>
+                            <constraint firstItem="kVG-0w-Tzi" firstAttribute="leading" secondItem="nJE-Dm-CAu" secondAttribute="leading" constant="16" id="4IM-0L-Mhe"/>
+                            <constraint firstAttribute="trailing" secondItem="kVG-0w-Tzi" secondAttribute="trailing" constant="16" id="6yD-yg-Wi9"/>
+                            <constraint firstItem="Hop-YW-vpz" firstAttribute="top" secondItem="Tbm-iO-gmV" secondAttribute="bottom" constant="83" id="HQb-uN-whM"/>
+                            <constraint firstItem="Tbm-iO-gmV" firstAttribute="leading" secondItem="nJE-Dm-CAu" secondAttribute="leading" constant="16" id="NpF-5j-LWh"/>
+                            <constraint firstItem="kVG-0w-Tzi" firstAttribute="top" secondItem="ejU-XQ-ewh" secondAttribute="bottom" constant="115" id="rAp-B6-PfQ"/>
+                            <constraint firstAttribute="trailing" secondItem="Tbm-iO-gmV" secondAttribute="trailing" constant="16" id="zzv-rK-9mv"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="tfWithFont" destination="9Xy-S9-4IO" id="0mi-T4-4pP"/>
-                        <outlet property="theTextField" destination="TKi-z6-njD" id="zD2-xD-2vy"/>
+                        <outlet property="myHeaderView" destination="vdO-Tn-EmI" id="fSh-Hf-Awv"/>
+                        <outlet property="tblA" destination="kVG-0w-Tzi" id="KHJ-Ht-Y4l"/>
+                        <outlet property="tblB" destination="Tbm-iO-gmV" id="ybw-NQ-wFr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Bt-Zh-RRT" userLabel="First Responder" sceneMemberID="firstResponder"/>
